[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://stuff/game_stuff/inventory/inventory_manager_ui.gd" id="1_manager"]
[ext_resource type="PackedScene" path="res://stuff/game_stuff/inventory/item_detail_popup.tscn" id="2_popup"]

[node name="InventoryManagerUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_manager")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="MainLayout" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Panel/MarginContainer/MainLayout"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Collected Clues"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/MainLayout"]
layout_mode = 2
size_flags_vertical = 3

[node name="StorageGrid" type="GridContainer" parent="Panel/MarginContainer/MainLayout/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 6

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/MainLayout"]
layout_mode = 2

[node name="Label2" type="Label" parent="Panel/MarginContainer/MainLayout"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Active Loadout (Max 5)"
horizontal_alignment = 1

[node name="LoadoutContainer" type="HBoxContainer" parent="Panel/MarginContainer/MainLayout"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="CloseButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
text = "X"

[node name="ItemDetailPopup" parent="." instance=ExtResource("2_popup")]
visible = false
layout_mode = 1

